# identity-service

./: .gitignore  README.md  pyproject.toml
helpers/: example_client_private_key.pem  example_client_public_key.pem  example_client_secret.txt  example_private_key.pem  example_public_key.pem
identity_service/: enums.py  models.py  settings.py  token.py
identity_service/authentication/api/: models.py  router.py
identity_service/clients/: __init__.py  enums.py
identity_service/clients/api/: models.py  router.py
identity_service/clients/database/: __init__.py  models.py  repository.py  schemas.py
identity_service/configuration/: __init__.py
identity_service/configuration/api/: models.py  router.py
identity_service/configuration/database/: __init__.py  models.py  repository.py  schemas.py
identity_service/database/: __init__.py  alembic.ini  exceptions.py  repository.py  schemas.py  session.py  types.py
identity_service/database/migrations/: env.py
identity_service/database/migrations/versions/: 5ea96a40c8a1_initial_migration.py  823bc2b78df9_add_users.py  ed215868e61e_add_permissions.py
identity_service/encryption/: __init__.py  fernet.py  methods.py
identity_service/health_checks/: __init__.py  enums.py  health_checks.py  models.py  router.py  schemas.py
identity_service/main/: api.py  application.py  constants.py  models.py  responses.py
identity_service/users/: __init__.py
identity_service/users/api/: models.py  router.py
identity_service/users/database/: __init__.py  models.py  repository.py  schemas.py
